# VScrit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
VScrit/src/: CMakeLists.txt  Layer.h  Render.cpp  Render.h  main.cpp
VScrit/src/Nodes/: AddNode.h  BaseNode.h  InputNode.h
cmake/: imgui.cmake
